[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Helpers/Utilities/TeleportNode2D.gd" type="Script" id=1]
[ext_resource path="res://assets/actions/tile_0395.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.9589, 7.29709 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.0019, 5.68512 )

[node name="TeleportNode2D" type="Node2D"]
script = ExtResource( 1 )

[node name="EndpointAlpha" type="Area2D" parent="."]
position = Vector2( -50, 0 )

[node name="ActivationArea" type="CollisionShape2D" parent="EndpointAlpha"]
shape = SubResource( 1 )

[node name="PromptAlpha" type="Sprite" parent="EndpointAlpha"]
visible = false
position = Vector2( 0, -50 )
texture = ExtResource( 2 )

[node name="TargetAlpha" type="Position2D" parent="EndpointAlpha"]

[node name="EndpointBeta" type="Area2D" parent="."]
position = Vector2( 50, 0 )

[node name="ActivationArea" type="CollisionShape2D" parent="EndpointBeta"]
shape = SubResource( 2 )

[node name="PromptBeta" type="Sprite" parent="EndpointBeta"]
visible = false
position = Vector2( 0, -50 )
texture = ExtResource( 2 )

[node name="TargetBeta" type="Position2D" parent="EndpointBeta"]

[connection signal="body_entered" from="EndpointAlpha" to="." method="_on_EndpointAlpha_body_entered"]
[connection signal="body_exited" from="EndpointAlpha" to="." method="_on_EndpointAlpha_body_exited"]
[connection signal="body_entered" from="EndpointBeta" to="." method="_on_EndpointBeta_body_entered"]
[connection signal="body_exited" from="EndpointBeta" to="." method="_on_EndpointBeta_body_exited"]
